# mcu-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASES.md  library.json  library.properties
docs/: supported-devices.md
examples/gamma-calibration-stm32-st7789/: platformio.ini
examples/gammacalibration-stm32-st7789/: platformio.ini
examples/helloworld-sdl/: CMakeLists.txt  main.c
examples/helloworld-sdl/src/: display.c  display.h  main.c  system.c  system.h
examples/helloworld-stm32-st7789/: platformio.ini
fonts/: build-fonts  font_material_symbolsR12_4.h  font_robotoR12_1.h  font_robotoR12_2.h  font_robotoR12_3.h  font_robotoR12_4.h  font_robotoR24.h  font_robotoR24_1.h  font_robotoR24_2.h  font_robotoR24_3.h  font_robotoR24_4.h  font_robotoR48_1.h  font_robotoR48_2.h  font_robotoR48_3.h  font_robotoR48_4.h  font_robotoR72_1.h  font_robotoR72_2.h  font_robotoR72_3.h  font_robotoR72_4.h  font_robotoR8.h  font_tiny5-Medium.h  mkfonts  roboto-matrixR24.bdf  roboto-matrixR8.bdf  tiny5-Medium.bdf
src/: mcu-renderer-sdl.c  mcu-renderer-st7565.c  mcu-renderer-st7789.c  mcu-renderer-st7789.h  mcu-renderer.c  mcu-renderer.h
src/mcu-renderer-fonts/: font_material_symbolsR12_4bpp.h  font_robotoM12_1.h  font_robotoM12_1bpp.h  font_robotoM12_2.h  font_robotoM12_2bpp.h  font_robotoM12_3.h  (+46 more)
tools/: fontconv.py  requirements.txt  textproc.py
tools/fontconv/: BitWriter.cpp  BitWriter.h  CMakeLists.txt  Font.cpp  Font.h  encode.cpp  encode.h  export.cpp  export.h  import_bdf.cpp  import_bdf.h  import_freetype.cpp  import_freetype.h  main.cpp  utils.cpp  utils.h
(+27 files in other folders)
